# mcp-rugido-yt

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
scripts/: entrypoint.sh
src/mcp_rugido_yt/: __init__.py  auth.py  config.py  crypto.py  runtime.py  server.py  sessions.py
src/mcp_rugido_yt/db/: __init__.py  models.py  session.py
src/mcp_rugido_yt/tools/: analytics.py  channel.py  comments.py  playlists.py  publishing.py  reporting.py  search.py  transcripts.py
src/mcp_rugido_yt/utils/: formatting.py  quota.py
tests/: conftest.py  test_auth.py  test_comments.py  test_formatting.py  test_playlists.py  test_publishing.py  test_quota.py  test_reporting.py  test_seo.py  test_tools.py
