[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-rugido-yt"
version = "0.1.0"
description = "MCP server multi-tenant para YouTube Data API, Analytics API e Reporting API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Rugido" },
]
keywords = ["mcp", "youtube", "analytics", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "mcp>=1.2.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.0",
    "youtube-transcript-api>=1.0.0",
    "starlette>=0.37.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "cryptography>=42.0.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "httpx>=0.27.0",
]

[project.scripts]
mcp-rugido-yt = "mcp_rugido_yt.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_rugido_yt"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E402"]  # alguns imports após @mcp.tool() são intencionais

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
